# virgo

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
tests/: test_taurus.py
virgo/: shell.py
